# CorsaConnect

./: .gitignore  Makefile  README.md  RESTART.bat  RidgeLink.py  START_ADMIN.bat  START_RIG.bat  UPDATE_RIG.bat  bootstrap.py  controls.ini  create_shortcuts.py  oculus.ini  pyproject.toml  race.ini  ridge_telemetry.py  ridgelink.py  video.ini
apps/: __init__.py
apps/orchestrator/: __init__.py  main.py  pyproject.toml  state.py
apps/orchestrator/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts.timestamp-1774566879141-404bed4c6a453.mjs
apps/orchestrator/frontend/src/: App.tsx  Kiosk.tsx  Lobby.tsx
apps/orchestrator/frontend/src/components/: GroupManager.tsx
apps/orchestrator/routers/: __init__.py  commands.py  groups.py  leaderboard.py  mumble.py  rigs.py  server.py  settings.py
apps/orchestrator/services/: __init__.py  acserver.py  content_scanner.py  dispatcher.py  heartbeat.py  leaderboard_db.py  mumble_service.py  spectator.py
apps/python/RidgeLink/: RidgeLink.py  manifest.ini
apps/sled/: __init__.py  agent.py  command_handler.py  config.json  config.py  heartbeat.py  launcher.py  main.py  pyproject.toml  sidecar.py  splash.py  telemetry.py
deploy/: run_hidden.vbs  start_dashboard.bat
ridge-link-orchestrator/backend/: main.py  pyproject.toml
ridge-link-orchestrator/frontend/: index.html  package-lock.json
ridge-link-orchestrator/frontend/src/: App.tsx  Kiosk.tsx  index.css
ridge-link-sled/: config.json  kiosk.py  pyproject.toml  sled.py  telemetry.py
ridge-link-sled/ridge_link_sled.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: add_test_lap.py  test_inputs.py
shared/: __init__.py  constants.py  models.py  pyproject.toml  utils.py
