[project]
name = "ridge-link-shared"
version = "2.0.0"
description = "Shared models and constants for Ridge-Link"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["shared*"]
