[project]
name = "ridge-link-sled"
version = "2.0.0"
description = "Lightweight agent for Ridge-Link racing rigs"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "psutil>=5.9",
    "pydantic>=2.0",
    "ridge-link-shared",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["apps.sled*"]
